# HappyEveryDay

./: .gitignore
HappyEveryDay/: Generator.bat
HappyEveryDay/CMake/: PreAutoGenDo.py  Utility.cmake
HappyEveryDay/Content/ShaderFiles/: 3.2.blending.fs  3.2.blending.vs  5.1.framebuffers_screen.fs  6.1.skybox.fs  EmptyScreen.fs  FragmentShader.fs  FragmentShader.txt  LightFragmentShader.fs  ObjectFragmentShader.fs  ObjectVertexShader.vs  VertexShader.vs
HappyEveryDay/Content/ShaderFiles/8.advanced_glsl_ubo/: 8.advanced_glsl.vs
HappyEveryDay/Content/ShaderFiles/9.2.geometry_shader_exploding/: 9.2.geometry_shader.gs  9.2.geometry_shader.vs
HappyEveryDay/Content/ShaderFiles/9.3.geometry_shader_normal/: 9.3.default.vs  9.3.geometry_shader_normal.gs  9.3.geometry_shader_normal.vs
HappyEveryDay/GeneratedCommonHeaders/: CommonGeneratedHeader.h
HappyEveryDay/Include/glad/: glad.h
HappyEveryDay/Libs/x64/: assimp.lib  glfw3.lib
HappyEveryDay/Shaders/: PixelShader.hlsl  VertexShader.hlsl
HappyEveryDay/Source/: CMakeLists.txt
HappyEveryDay/Source/Core/: CMakeLists.txt
HappyEveryDay/Source/Core/Delegates/DelegateHandle/: DelegateHandle.h  DelegateHandleBase.h
HappyEveryDay/Source/Core/Delegates/DelegateInstance/: DelegateInstanceBase.h  StaticDelegateInstance.h
HappyEveryDay/Source/Core/HAL/: Platform.h
HappyEveryDay/Source/DX12/DX12Sample/: CMakeLists.txt
HappyEveryDay/Source/DX12/DX12Sample/Main/: main.cpp
HappyEveryDay/Source/Engine/ApplicationCore/: CMakeLists.txt
HappyEveryDay/Source/Engine/ApplicationCore/Android/: AndroidApplication.cpp  AndroidApplication.h  AndroidPlatformApplicationMisc.cpp  AndroidPlatformApplicationMisc.h  AndroidWindow.cpp  AndroidWindow.h
HappyEveryDay/Source/Engine/ApplicationCore/GenericPlatform/: GenericApplication.cpp  GenericApplication.h  GenericPlatformApplicationMisc.cpp  GenericPlatformApplicationMisc.h  GenericWindow.cpp  GenericWindow.h
HappyEveryDay/Source/Engine/ApplicationCore/HAL/: PlatformApplicationMisc.h
HappyEveryDay/Source/Engine/ApplicationCore/Message/: MessageDefine.h
HappyEveryDay/Source/Engine/ApplicationCore/Windows/: WindowsApplication.cpp  WindowsApplication.h  WindowsPlatformApplicationMisc.cpp  WindowsPlatformApplicationMisc.h  WindowsWindow.cpp  WindowsWindow.h
HappyEveryDay/Source/Engine/Core/: CMakeLists.txt
HappyEveryDay/Source/Engine/Core/Containers/: Array.h  CoreString.h  Map.h  String.h
HappyEveryDay/Source/Engine/Core/Delegates/: Delegate.h
HappyEveryDay/Source/Engine/Core/HAL/: Platform.h
HappyEveryDay/Source/Engine/Core/Logging/: Log.cpp  Log.h  LogMarcos.h
HappyEveryDay/Source/Engine/Core/Math/: Vector.cpp  (+2 more)
HappyEveryDay/Source/Engine/Engine/: CMakeLists.txt
HappyEveryDay/Source/Engine/RHI/: CMakeLists.txt
HappyEveryDay/Source/Engine/RenderCore/: CMakeLists.txt
HappyEveryDay/Source/Engine/Utility/: CMakeLists.txt
HappyEveryDay/Source/Engine/app/: CMakeLists.txt  main.cpp
HappyEveryDay/Source/Engine/glm/: CMakeLists.txt
HappyEveryDay/Source/Engine/math/: CMakeLists.txt
HappyEveryDay/Source/GeneratedHeaders/: CMakeLists.txt  CommonGeneratedHeader.h
HappyEveryDay/Source/LearnOpenGL/LearnOpenGL/: CMakeLists.txt
HappyEveryDay/Source/Plugins/PluginTest/: CMakeLists.txt
HappyEveryDay/Source/Sample/ExeSample/: CMakeLists.txt
HappyEveryDay/Source/Sample/LibSample/: CMakeLists.txt
HappyEveryDay/Source/SoftwareRasterizer/SoftwareRasterizer/: CMakeLists.txt
HappyEveryDay/Source/UnitTest/: CMakeLists.txt
HappyEveryDay/Source/UnitTest/Main/: main.cpp
HappyEveryDay/Source/UnitTest/PlaceNew/: PlaceNewTest.h
HappyEveryDay/Source/Utility/: CMakeLists.txt
HappyEveryDay/Source/app/: CMakeLists.txt  main.cpp
HappyEveryDay/Source/math/: CMakeLists.txt
(+41 files in other folders)
